make a UML factory for annotation